# ad-mnist

./: CHANGELOG.md  LICENSE  Main.hs  README.md  ad-mnist.cabal  default.nix  packages.nix  release.nix  shell.nix
app/: Main.hs
data/: default.nix
nix/: sources.json
src/: MNIST.hs
src/MNIST/: Classifier.hs  Simple.hs
test/: Spec.hs
