name:               ad-mnist
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Matt Wittmann
maintainer:         mcwitt@gmail.com
build-type:         Simple
extra-source-files: CHANGELOG.md
cabal-version:      >= 1.10

executable ad-mnist
  main-is:          Main.hs
  build-depends:    base       >= 4.13 && < 4.14
                  , ad         >= 4.4 && < 4.5
                  , binary     >= 0.8.7 && < 0.9
                  , bytestring >= 0.10.10 && < 0.11
  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-record-updates
